erDiagram
    %% 요구사항 객체정의서 기준 논리 ERD: 27개 객체
    %% 레거시 family_invite_code와 개발용 plan_preview는 제외한다.
    %% personal_schedule conditional composite UK:
    %% (family_id, member_id, external_source, external_id), when external_id is present.
    direction LR

    familyGroup["Family Group"] {
        string id PK
        string name
        string plan
        datetime created_at
    }
    familyLocation["Family Location"] {
        string family_id PK, FK
        string city
        string district
        datetime updated_at
    }
    familyMember["Family Member"] {
        string id PK
        string family_id FK
        string name
        string role
        string status
        boolean is_owner
        datetime created_at
    }
    child["Child"] {
        string id PK
        string family_id FK
        string name
        string age_label
        string photo_storage_path
        string photo_mime_type
        datetime photo_updated_at
    }
    familyInviteLink["Reusable Invite Code / Link"] {
        string code_hash PK
        string family_id FK
        string created_by_member_id FK
        datetime expires_at
        datetime created_at
        int join_count
        int max_uses
        datetime revoked_at
    }
    familySession["Family Session"] {
        string token_hash PK
        string family_id FK
        string member_id FK
        datetime expires_at
        datetime last_seen_at
    }
    personalSchedule["Personal Schedule"] {
        string id PK
        string family_id FK
        string member_id FK
        string title
        datetime starts_at
        datetime ends_at
        boolean has_end_time
        string kind
        string external_source
        string external_id
        string recurrence_id
        string recurrence_rule
    }
    childSchedule["Child Schedule"] {
        string id PK
        string family_id FK
        string child_id FK
        string title
        string category
        datetime starts_at
        datetime ends_at
        boolean has_end_time
        string source
        datetime created_at
        string recurrence_id
        string recurrence_rule
    }
    careIntake["Care Intake"] {
        string id PK
        string family_id FK
        string child_id FK
        string raw_content
        string input_type
        datetime created_at
    }
    careItem["Care Item"] {
        string id PK
        string family_id FK
        string intake_id FK
        string child_id FK
        string child_schedule_id FK
        string item_type
        string title
        string detail
        datetime starts_at
        string confidence
        string status
        datetime created_at
    }
    careAssignment["Care Assignment"] {
        string id PK
        string family_id FK
        string item_id FK
        string assignee_id FK
        string requested_by_member_id FK
        string status
        string source
        datetime created_at
        datetime responded_at
        datetime completed_at
        string note
        datetime reminder_sent_at
    }
    careException["Care Exception"] {
        string id PK
        string family_id FK
        string assignment_id FK
        string reason
        string alternative_member_id FK
        string status
        datetime created_at
    }
    careHandoff["Care Handoff"] {
        string id PK
        string family_id FK
        string assignment_id FK
        string from_member_id FK
        string to_member_id FK
        string briefing
        string special_note
        string status
        datetime acknowledged_at
    }
    notification["Notification"] {
        string id PK
        string family_id FK
        string member_id FK
        string title
        string body
        string level
        boolean is_read
        string action_type
        string action_id
        datetime created_at
    }
    familyDataPermission["Family Data Permission"] {
        string member_id PK, FK
        string scope PK
        boolean is_allowed
    }
    notificationPreference["Notification Preference"] {
        string member_id PK, FK
        boolean app_enabled
        boolean daily_digest_enabled
        boolean device_enabled
    }
    dailyUsage["Daily Usage"] {
        string family_id PK, FK
        string day PK
        string feature PK
        int amount
    }
    assistantMessage["Assistant Message"] {
        string id PK
        string family_id FK
        string member_id FK
        string role
        string content
        datetime created_at
    }
    emergencyRequest["Emergency Request"] {
        string id PK
        string family_id FK
        string assignment_id FK
        string requested_by_member_id FK
        string reason
        string status
        string claimed_by_member_id FK
        datetime created_at
        datetime resolved_at
    }
    mediaAsset["Media Asset"] {
        string id PK
        string family_id FK
        string child_id FK
        string assignment_id FK
        string uploaded_by_member_id FK
        string kind
        string storage_path
        string date_folder
        string file_name
        string mime_type
        string content_base64
        string caption
        datetime created_at
    }
    deviceAlertOutbox["Device Alert Outbox"] {
        string id PK
        string family_id FK
        string member_id FK
        string assignment_id FK
        string title
        string body
        string status
        datetime created_at
    }
    pushDeviceToken["Push Device Token"] {
        string token PK
        string family_id FK
        string member_id FK
        string platform
        datetime created_at
        datetime updated_at
    }
    memberBenefitLocation["Member Benefit Location"] {
        string family_id PK, FK
        string member_id PK, FK
        string city
        string district
        datetime updated_at
    }
    familySubscription["Family Subscription"] {
        string family_id PK, FK
        string provider
        string customer_key UK
        string billing_key
        string status
        int amount
        datetime current_period_start
        datetime current_period_end
        datetime next_billing_at
        boolean cancel_at_period_end
        datetime canceled_at
        int renewal_failure_count
        string last_renewal_error
        string last_auth_key_hash
        datetime created_at
        datetime updated_at
    }
    paymentTransaction["Payment Transaction"] {
        string order_id PK
        string family_id FK
        string provider
        int amount
        string status
        string payment_key
        datetime approved_at
        datetime created_at
    }
    calendarOauthState["Calendar OAuth State"] {
        string state PK
        string family_id FK
        string member_id FK
        string provider
        datetime expires_at
        string return_url
    }
    calendarConnection["Calendar Connection"] {
        string family_id PK, FK
        string member_id PK, FK
        string provider PK
        string access_token
        string refresh_token
        datetime expires_at
        datetime connected_at
        datetime synced_at
    }

    familyGroup ||--o| familyLocation : has
    familyGroup ||--o{ familyMember : contains
    familyGroup ||--o{ child : cares_for
    familyGroup ||--o{ familyInviteLink : issues
    familyGroup ||--o{ familySession : scopes
    familyGroup ||--o{ personalSchedule : scopes
    familyGroup ||--o{ childSchedule : scopes
    familyGroup ||--o{ careIntake : receives
    familyGroup ||--o{ careItem : owns
    familyGroup ||--o{ careAssignment : owns
    familyGroup ||--o{ careException : owns
    familyGroup ||--o{ careHandoff : owns
    familyGroup ||--o{ notification : emits
    familyGroup ||--o{ dailyUsage : tracks
    familyGroup ||--o{ assistantMessage : contains
    familyGroup ||--o{ emergencyRequest : raises
    familyGroup ||--o{ mediaAsset : owns
    familyGroup ||--o{ deviceAlertOutbox : queues
    familyGroup ||--o{ pushDeviceToken : registers
    familyGroup ||--o{ memberBenefitLocation : locates
    familyGroup ||--o| familySubscription : subscribes
    familyGroup ||--o{ paymentTransaction : records
    familyGroup ||--o{ calendarOauthState : authorizes
    familyGroup ||--o{ calendarConnection : connects

    familyMember ||--o{ personalSchedule : owns
    familyMember o|--o{ familyInviteLink : creates
    familyMember ||--o{ familySession : authenticates
    familyMember ||--o{ careAssignment : assigned_to
    familyMember o|--o{ careAssignment : requests
    familyMember ||--o{ careException : may_replace
    familyMember o|--o{ careHandoff : hands_off
    familyMember ||--o{ careHandoff : receives
    familyMember o|--o{ notification : receives
    familyMember ||--o{ familyDataPermission : configures
    familyMember ||--o| notificationPreference : configures
    familyMember o|--o{ assistantMessage : converses
    familyMember ||--o{ emergencyRequest : requests
    familyMember o|--o{ emergencyRequest : claims
    familyMember o|--o{ mediaAsset : uploads
    familyMember ||--o{ deviceAlertOutbox : targets
    familyMember ||--o{ pushDeviceToken : registers
    familyMember ||--o| memberBenefitLocation : locates
    familyMember ||--o{ calendarOauthState : authorizes
    familyMember ||--o{ calendarConnection : connects

    child ||--o{ childSchedule : has
    child o|--o{ careIntake : concerns
    child o|--o{ careItem : concerns
    child o|--o{ mediaAsset : appears_in
    childSchedule o|--o{ careItem : informs
    careIntake o|--o{ careItem : extracts
    careItem ||--o{ careAssignment : assigned_as
    careAssignment ||--o{ careException : triggers
    careAssignment ||--o{ careHandoff : transfers
    careAssignment ||--o{ emergencyRequest : escalates
    careAssignment o|--o{ mediaAsset : proves
    careAssignment o|--o{ deviceAlertOutbox : alerts
